# ans-tuss-etl

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  mise.toml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/adr/: 0001-formato-de-staging-parquet.md  0002-transformacao-em-polars-nao-elt.md  0003-versionamento-por-snapshot.md  0004-ingestao-local-first.md  0005-layout-de-staging.md  0006-modelo-de-dados-hibrido.md  0007-carga-no-postgres.md
migrations/: 0001_terminologias.down.sql  0001_terminologias.up.sql
src/etl_tuss/: __init__.py  cli.py  content_hash.py  extension_assembler.py  medicamento_schema.py  opme_schema.py  parquet_writer.py  postgres_loader.py  release_extractor.py  release_loader.py  release_sources.py  sheet_reader.py  terminology_assembler.py  tuss_schema.py
tests/: conftest.py  test_cli.py  test_content_hash.py  test_extension_assembler.py  test_medicamento_schema.py  test_opme_schema.py  test_package.py  test_parquet_writer.py  test_postgres_loader.py  test_release_extractor.py  test_release_loader.py  test_release_sources.py  test_sheet_reader.py  test_terminology_assembler.py  test_tuss_schema.py
