[project]
name = "etl-tuss"
version = "0.1.0"
description = "ETL de tabelas TUSS da ANS para banco de consultas."
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "fastexcel>=0.10",
    "psycopg[binary]>=3.2",
]

[project.scripts]
etl-tuss = "etl_tuss.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "xlsxwriter>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl_tuss"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # valores literais em asserts de teste são aceitáveis

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RET", # flake8-return (early returns)
    "PL",  # pylint
]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["fastexcel", "xlsxwriter", "xlsxwriter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
